tests/ui/simd/intrinsic/generic-arithmetic-2.stderr
error[E0511]: invalid monomorphization of `simd_add` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:72:9
   |
LL |         simd_add(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_sub` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:74:9
   |
LL |         simd_sub(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_mul` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:76:9
   |
LL |         simd_mul(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_div` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:78:9
   |
LL |         simd_div(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shl` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:80:9
   |
LL |         simd_shl(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shr` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:82:9
   |
LL |         simd_shr(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_and` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:84:9
   |
LL |         simd_and(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_or` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:86:9
   |
LL |         simd_or(0, 0);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_xor` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:88:9
   |
LL |         simd_xor(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_neg` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:91:9
   |
LL |         simd_neg(0);
   |         ^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bswap` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:93:9
   |
LL |         simd_bswap(0);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shl` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:97:9
   |
LL |         simd_shl(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shr` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:99:9
   |
LL |         simd_shr(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_and` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:101:9
   |
LL |         simd_and(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_or` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:103:9
   |
LL |         simd_or(z, z);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_xor` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:105:9
   |
LL |         simd_xor(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bswap` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:107:9
   |
LL |         simd_bswap(z);
   |         ^^^^^^^^^^^^^

error: aborting due to 17 previous errors

For more information about this error, try `rustc --explain E0511`.
